[package]
name = "mango"
description = "The Mango programming language (UNDER CONSTRUCTION)"
version = "0.6.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
homepage = "https://mangocode.org/"
license = "Apache-2.0"
edition = "2018"
publish = true
include = [
    "src/**/*",
    "Cargo.toml"
]

[lib]
name = "mangolib"
path = "src/lib.rs"

[[bin]]
name = "mango"
path = "src/main.rs"

[dependencies]
dirs = "3.0"
